--- a/grid/templates/change-deal.html
+++ b/grid/templates/change-deal.html
@@ -3,19 +3,21 @@
 {% load humanize %}
 
 {% block head %}
+    <script src="{% static "js/editor/year-based-fields.js" %}" type="text/javascript" charset="utf-8"></script>
+{#     <script src="{% static "js/editor/livesearch.js" %}" type="text/javascript" charset="utf-8"></script> #}
+    <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
+
+    {# map #}
     <link rel="stylesheet" href="{% static "vendor/openlayers/ol.css" %}"/>
     <link rel="stylesheet" href="{% static "css/map.css" %}"/>
 
-    {# map #}
     <script src="{% static "vendor/openlayers/ol.js" %}" type="text/javascript"></script>
     <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
-
     <script src="{% static "js/editor/map.js" %}" type="text/javascript" charset="utf-8"></script>
-    <!--<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=en"></script>-->
+    <script src="{% static "js/editor/jquery.formset.custom.js" %}" type="text/javascript" charset="utf-8"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB59at4M4o0ERqk8OkvZOYjxH7N-8_HkNE&libraries=places"></script>
 
-    <script src="{% static "js/editor/year-based-fields.js" %}" type="text/javascript" charset="utf-8"></script>
     <!--script src="/media/js/editor/livesearch.js" type="text/javascript" charset="utf-8"></script-->
     <!--script src="/media/js/editor/add_change.js" type="text/javascript" charset="utf-8"></script-->
     <script>unlockMaps()</script>
