--- a/grid/templates/global_base.html
+++ b/grid/templates/global_base.html
@@ -67,6 +67,9 @@
 {% endblock %}
 
 {% block js %}
+    <script src="{% static "vendor/d3/d3.min.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "vendor/d3-sankey/sankey/sankey.js" %}" type="text/javascript" charset="utf-8"></script>
+
     <script src="{% static "js/editor/detail.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "legacy/vendor/jquery.stickytableheaders.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "legacy/main.js" %}" type="text/javascript" charset="utf-8"></script>
