--- a/landmatrix/static/css/content.css
+++ b/landmatrix/static/css/content.css
@@ -2410,6 +2410,27 @@ form .panel-body {
     display: none;
 }
 
+
+.node rect {
+    cursor: move;
+    fill-opacity: .9;
+    shape-rendering: crispEdges;
+}
+
+.node text {
+    pointer-events: none;
+}
+
+.link {
+    fill: none;
+    stroke: #000;
+    stroke-opacity: .2;
+}
+
+.link:hover {
+    stroke-opacity: .5;
+}
+
 /* ==========================================================================
  *    STATS
  * ========================================================================== */
