--- a/templates/filters.html
+++ b/templates/filters.html
@@ -6,7 +6,7 @@
         <form>
             {% csrf_token %}
             <div class="col-md-10" id="filterlist">
-                <label>{% trans "No active filters" %}:</label>
+                <label>{% trans "No active filters" %}</label>
             </div>
         </form>
         <div class="col-md-2 text-right">
@@ -25,7 +25,7 @@
     <div id="manage-filters" class="clearfix collapse">
         <div class="row">
             <div class="col-md-3 filterbox no-pad">
-                <ul class="variables">
+                <ul class="presets variables">
                     <li>
                         <h4>Preset Category Label</h4>
                         <ul>
