--- a/grid/templates/includes/dealpanels.html
+++ b/grid/templates/includes/dealpanels.html
@@ -41,6 +41,12 @@
                             map.attr('id', 'map-' + mapId);
                             initializeMap(mapId);
                         }
+
+                        var investor = form.find('.operational_stakeholder');
+                        if (investor) {
+                            var index = 0;
+                            setupSankey(index);
+                        }
                     }
                     $(document).ready(function () {
                         $('.{{ form.form_title|slugify }}-form').formset({
